# wkbre

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  anim.cpp  anim.h  bitmap.cpp  bitmap.h  clean.bat  cursor.cpp  cursor.h  defs.TXT  defs.c  defs.h  dialog.cpp  dialog.h  drawing.cpp  drawing.h  dynlist.h  file.cpp  file.h  font.cpp  font.h  gfxcon.cpp  gfxcon.h  global.h  growbuffer.cpp  growbuffer.h  gui.h  help.htm  imguiimpl.cpp  imguiimpl.h  index.html  language.cpp  language.h  lzrw3.c  lzrw_headers.h  map.cpp  map.h  (+39 more)
bzip2/: CMakeLists.TXT  Makefile  build_mg_d.bat  build_mg_r.bat  build_vc_d.bat  build_vc_r.bat  clean.bat  gpphelp.txt  makefile_d.msc  makefile_r.msc
docs/: changelog.txt  codedoc.txt  final_settings.TXT  finder_disterm.txt  help.htm  todo.txt  wksd.txt  wksd_ai.TXT  wksd_cmd.txt  wksd_ot.txt  wkshdat.txt
gameset/: dyntext.cpp  dyntext.h  gameset.h  gs_3dclip.cpp  gs_3dclip.h  gs_animation.cpp  gs_animation.h  gs_campath.cpp  gs_campath.h  gs_command.cpp  gs_command.h  gs_footprint.cpp  gs_footprint.h  gs_gametextwindow.cpp  gs_gametextwindow.h  gs_order.cpp  gs_order.h  itile.cpp  itile.h  loadgameset.cpp  objdef.cpp  objdef.h  savegame.cpp  savegame.h  sg_ai.cpp  sg_ai.h  sg_clientstate.cpp  sg_clientstate.h  sg_diplostat.cpp  sg_diplostat.h  sg_order.cpp  sg_order.h
notes/: abstract_3d.txt  advancetime.txt  angles.txt  anim.txt  animstate.txt  b5g5r5a1.txt  batchrender.txt  battlesdelseq.txt  bcm_lakes.txt  blueprint_reading_template.TXT  camerapath.txt  ctrigger.txt  d3dx_dll.cpp  d3dx_dll.h  dyntext.txt  file2.cpp  fsubinpretback.txt  future.txt  gametextwindow.txt  gplhead.txt  gs_command.txt  idmarkclusters.txt  itile.txt  map_normals.txt  maptexdb.txt  missile.txt  odanim.txt  (+21 more)
(+24 files in other folders)
